--- a/src/Couture/ClientBundle/Resources/views/Client/edit.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/edit.html.twig
@@ -1,4 +1,5 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{#% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %#}
+{% extends '::base.html.twig' %}
 
 {% block title %}
 {{ parent() }} -  {{ 'views.edit.edit'|trans({'%entity%': 'Client'}, 'JordiLlonchCrudGeneratorBundle') }}
