--- a/src/Couture/ClientBundle/Resources/views/Client/show.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/show.html.twig
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="span5 ">
             <div class="panel panel-success background_infos">
-                    <div class="panel-heading"><h3 class="panel-title">Informations du temps</h3></div>
+                    <div class="panel-heading"><h3 class="panel-title">Informations du client</h3></div>
                     <div class="panel-body">
 <form class="form-horizontal">
     <fieldset>        <!--div class="control-group">
@@ -53,13 +53,17 @@
                     <div class="panel-body">
                         <table class="table table-striped table-condensed table-details">
                             <tr>
-                                <th>Test 1 </th>
-                                <th>Test 2 </th>
+                                <th>Date</th>
+                                <th>Libellé </th>
+                                <th>Tissu </th>
                             </tr>
+                            {% for couture in coutures %}
                             <tr>
-                                <td>Ligne 1 </td>
-                                <td>Ligne colonne  2 </td>
+                                <td><a href="#">{{couture.datec|date('d-m-Y')}}</a></td>
+                                <td>{{couture.libelle}}</td>
+                                <td>{{couture.tissu}}</td>
                             </tr>
+                            {% endfor %}
                         </table>
                     </div>
                 </div>
