--- a/web/css/spiderman.css
+++ b/web/css/spiderman.css
@@ -19,8 +19,8 @@ body{
 .background_infos .form-horizontal .control-label {
     float: left;
     padding-top: 5px;
-    text-align: right;
-    width: 0px;
+    text-align: left;
+/*    width: 0px;*/
 }
 
 .titre
