J'ai placer le menu (codé en dure sur la base.htl.twig)

--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/index.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/index.html.twig
@@ -1,4 +1,5 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{#% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %#}
+{% extends '::base.html.twig' %}
 
 {% block title %}
 {{ parent() }} - {{ 'views.index.list'|trans({'%entity%': 'Tailleur'}, 'JordiLlonchCrudGeneratorBundle') }}
