--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,8 +9,9 @@
 
     <!-- Le styles -->
     <link href="{{ asset('bundles/jordillonchcrudgenerator/css/bootstrap.css') }}" rel="stylesheet">
-    <link href="{{ asset('css/spiderman.css') }}" rel="stylesheet">
     <link href="{{ asset('css/bootstrap.min_1.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/spiderman.css') }}" rel="stylesheet">
+    
     <style>
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -29,10 +30,80 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <!--div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-collapse collapse">
+
+                {% block menu %}{{ knp_menu_render('CoutureClientBundle:Builder:mainMenu') }}{% endblock %}
+            </div>
+        </div>
+    </div-->
+            
+            
+            
+            
+            
+            <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <!--button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button-->
+            <a class="navbar-brand" href="#"><img src="{{ asset('images/LOGO.png') }}" /></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Client <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('client_new') }}">Ajouter</a></li>
+                <li><a href="{{ path('client') }}">Lister</a></li>
+                
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Modèle <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('modele_new') }}">Ajouter</a></li>
+                <li><a href="{{ path('modele') }}">Lister</a></li>
+                
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Couture <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('couture_new') }}">Ajouter</a></li>
+                <li><a href="{{ path('couture') }}">Lister</a></li>
+                
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Facturation <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('facture_new') }}">Ajouter</a></li>
+                <li><a href="{{ path('facture') }}">Lister</a></li>
+                
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tailleur <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('tailleur_new') }}">Ajouter</a></li>
+                <li><a href="{{ path('tailleur') }}">Lister</a></li>
+                
+              </ul>
+            </li>
+            
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
     
-            {#% block menu %}{{ knp_menu_render('CoutureClientBundle:Builder:mainMenu') }}{% endblock %#}
-    </nav>
     
 <div class="container">
     
