--- a/src/Couture/CoutureBundle/Resources/views/Modele/new.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/new.html.twig
@@ -1,4 +1,5 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{#% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %#}
+{% extends '::base.html.twig' %}
 
 {% block title %}
 {{ parent() }} - {{ 'views.new.creation'|trans({'%entity%': 'Modele'}, 'JordiLlonchCrudGeneratorBundle') }}
