--- a/src/Couture/CoutureBundle/Resources/views/Modele/show.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/show.html.twig
@@ -53,6 +53,31 @@
              
         
         </div>
+            
+            <div class="row">
+                <div class="panel panel-success">
+                    <div class="panel-heading show-details"><h3 class="panel-title">Dernières Coutures de ce modèle <span class="badge">3</span></h3></div>
+                    <div class="panel-body">
+                        <table class="table table-striped table-condensed table-details">
+                            <tr>
+                                <th>Date</th>
+                                <th>Montant </th>
+                                <th>Tissu </th>
+                                
+                                
+                            </tr>
+                            
+                            {% for couture in coutures %}
+                            <tr>
+                                <td><a href="#">{{couture.datec|date('d-m-Y')}}</a></td>
+                                <td>{{couture.prix}}</td>
+                                <td>{{couture.tissu}}</td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                </div>
+            </div>
         
 
 <div class="row">
