--- a/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
@@ -6,12 +6,13 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Nos Clients </h1></div>
+    </div>
 
 <div class="row">
     
-    <div class="span8">
-        <h1>{{ 'views.index.list'|trans({'%entity%': 'Client'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-    </div>
+    
     <div class="span2">
         {% if form_errors(filterForm) %}
         <div class="alert alert-block alert-error fade in form-errors">
@@ -52,8 +53,12 @@
     </div>
 
     <div class="span12">
-
-    <table class="table table-striped table-bordered table-condensed">
+    
+        <div class="row">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">La liste des Clients<span class="badge">13</span></h3></div>
+                    <div class="panel-body">
+    <table class="table table-striped table-condensed">
     <thead>
         <tr>
             <!--th>Id</th-->
@@ -84,13 +89,18 @@
         </a>
         <a class="btn btn-mini" href="{{ path('client_edit', { 'id': entity.id }) }}">
             {{ 'views.actions.edit'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
+            <!--span class="glyphicon glyphicon-edit"> </span-->
         </a>            </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
     </div>
+    </div>
+    </div>
+    </div>
 
+    <div class='row'>
     <div class="span4">
     {{ pagerHtml|raw }}
     </div>
