--- a/src/Couture/CoutureBundle/Resources/views/Couture/edit.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{% extends '::base.html.twig' %}
 
 {% block title %}
 {{ parent() }} -  {{ 'views.edit.edit'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}
