--- a/src/Couture/CoutureBundle/Resources/views/Couture/index.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/index.html.twig
@@ -1,4 +1,5 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{% extends '::base.html.twig' %}
+
 
 {% block title %}
 {{ parent() }} - {{ 'views.index.list'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}
@@ -53,6 +54,10 @@
     </div>
 
     <div class="span12">
+        <div class="row">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">La liste des Clients<span class="badge">13</span></h3></div>
+                    <div class="panel-body">
 
     <table class="table table-striped table-bordered table-condensed">
     <thead>
@@ -93,7 +98,10 @@
     </tbody>
 </table>
     </div>
-
+    </div>
+    </div>
+    </div>
+<div class='row'>
     <div class="span4">
     {{ pagerHtml|raw }}
     </div>
