--- a/src/Couture/CoutureBundle/Resources/views/Couture/new.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/new.html.twig
@@ -1,21 +1,28 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{% extends '::base.html.twig' %}
+
 
 {% block title %}
 {{ parent() }} - {{ 'views.new.creation'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}
 {% endblock %}
 
-{% block page %}
-
-<h1>{{ 'views.new.creation'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-
+{% block page %}<div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Nouvelle Couture </h1></div>
+    </div>
+    
+<!--h1>{{ 'views.new.creation'|trans({'%entity%': 'Client'}, 'JordiLlonchCrudGeneratorBundle') }}</h1-->
+    <div class='row'>
+    {% form_theme form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+<div class="col-sm-6 col-sm-offset-3">
 <form class="well" action="{{ path('couture_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <p>
         <button type="submit" class="btn btn-success">{{ 'views.new.create'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+        </div>
 
-<div>
+<div class='row'>
     <div class="float-left">
         <a class="btn" href="{{ path('couture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
