--- a/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %}
+{% extends '::base.html.twig' %}
 
 {% block title %}
 {{ parent() }} - {{ 'views.show.show'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}
