--- a/src/Couture/CoutureBundle/Resources/views/Modele/index.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/index.html.twig
@@ -53,8 +53,12 @@
     </div>
 
     <div class="span12">
+        <div class="row">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">La liste des Modèles<span class="badge">13</span></h3></div>
+                    <div class="panel-body">
 
-    <table class="table table-striped table-bordered table-condensed">
+    <table class="table table-striped table-condensed">
     <thead>
         <tr>
             <th>Id</th>
@@ -87,7 +91,11 @@
     </tbody>
 </table>
     </div>
-
+    </div>
+    </div>
+    </div>
+    
+    <div class='row'>
     <div class="span4">
     {{ pagerHtml|raw }}
     </div>
