--- a/src/Couture/CoutureBundle/Resources/views/Modele/new.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/new.html.twig
@@ -6,15 +6,21 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Nouveau Modèle </h1></div>
+    </div>
 
-<h1>{{ 'views.new.creation'|trans({'%entity%': 'Modele'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-
+<div class='row'>
+    {% form_theme form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+<div class="col-sm-6 col-sm-offset-3">
 <form class="well" action="{{ path('modele_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <p>
         <button type="submit" class="btn btn-success">{{ 'views.new.create'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+    </div>
 
 <div>
     <div class="float-left">
