--- a/web/css/spiderman.css
+++ b/web/css/spiderman.css
@@ -74,3 +74,29 @@ body{
     position: relative;
     top: -25px;
 }
+
+.form-group
+{
+    margin-bottom: 20px;
+}
+.control-label
+{
+    margin-top: auto;
+}
+
+.well {
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 20px;
+    min-height: 20px;
+    padding: 50px;
+}
+
+.btn-success {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+    color: #fff;
+    float: right;
+}
