les interfaces le styles des interfaces d'ajout de modification et de listing est effectué!

--- a/src/Couture/ClientBundle/Resources/views/Client/new.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/new.html.twig
@@ -23,7 +23,7 @@
 </div>
         </div>
 
-<div>
+<div class='row'>
     <div class="float-left">
         <a class="btn" href="{{ path('client') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
