--- a/src/Couture/CoutureBundle/Resources/views/Couture/edit.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/edit.html.twig
@@ -4,10 +4,13 @@
 {{ parent() }} -  {{ 'views.edit.edit'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}
 {% endblock %}
 
-{% block page %}
-    
+{% block page %}<div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Modification couture : {{ entity.id }} {{ entity.infosCouture }} </h1></div>
+    </div>
 
-<h1>{{ 'views.edit.edit'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
+<div class='row'>
+    {% form_theme edit_form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+    <div class="col-sm-6 col-sm-offset-3">
 
 <form class="well" action="{{ path('couture_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     <input type="hidden" name="_method" value="PUT" />
@@ -16,8 +19,10 @@
         <button type="submit" class="btn btn-success">{{ 'views.edit.editbutton'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+</div>
 
-<div>
+<div class='row'>
     <div class="float-left">
         <a class="btn" href="{{ path('couture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
