--- a/src/Couture/FacturationBundle/Resources/views/Facture/edit.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/edit.html.twig
@@ -6,9 +6,14 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Modification Facture : {{ entity.id }} </h1></div>
+    </div>
 
-<h1>{{ 'views.edit.edit'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-
+<div class='row'>
+    {% form_theme edit_form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+    <div class="col-sm-6 col-sm-offset-3">
+    
 <form class="well" action="{{ path('facture_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     <input type="hidden" name="_method" value="PUT" />
     {{ form_widget(edit_form) }}
@@ -16,8 +21,10 @@
         <button type="submit" class="btn btn-success">{{ 'views.edit.editbutton'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+</div>
 
-<div>
+<div class="row">
     <div class="float-left">
         <a class="btn" href="{{ path('facture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
