--- a/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
@@ -2,15 +2,19 @@
 {% extends '::base.html.twig' %}
 
 {% block title %}
-{{ parent() }} - {{ 'views.index.list'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}
+{#{ parent() }} - {{ 'views.index.list'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }#}
+Facturation
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Facturation </h1></div>
+    </div>
 
 <div class="row">
 
     <div class="span8">
-        <h1>{{ 'views.index.list'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
+        <h1>{#{ 'views.index.list'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }#}Liste des Factures</h1>
     </div>
     <div class="span2">
         {% if form_errors(filterForm) %}
@@ -50,8 +54,11 @@
     </div>
 
     <div class="span12">
-
-    <table class="table table-striped table-bordered table-condensed">
+        <div class="row">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">Les Factures <span class="badge">13</span></h3></div>
+                    <div class="panel-body">
+    <table class="table table-striped table-condensed">
     <thead>
         <tr>
             <th>Id</th>
@@ -88,7 +95,11 @@
     </tbody>
 </table>
     </div>
-
+    </div>
+    </div>
+    </div>
+    
+    <div class="row">
     <div class="span4">
     {{ pagerHtml|raw }}
     </div>
