--- a/src/Couture/FacturationBundle/Resources/views/Facture/new.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/new.html.twig
@@ -6,17 +6,25 @@
 {% endblock %}
 
 {% block page %}
-
-<h1>{{ 'views.new.creation'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Nouvelle Facture </h1></div>
+    </div>
+    
+<!--h1>{{ 'views.new.creation'|trans({'%entity%': 'Client'}, 'JordiLlonchCrudGeneratorBundle') }}</h1-->
+    <div class='row'>
+    {% form_theme form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+    <div class="col-sm-6 col-sm-offset-3">
 <form class="well" action="{{ path('facture_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <p>
         <button type="submit" class="btn btn-success">{{ 'views.new.create'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+    </div>
+        
 
-<div>
+<div class='row'>
     <div class="float-left">
         <a class="btn" href="{{ path('facture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
