--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/index.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/index.html.twig
@@ -6,12 +6,15 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Employés </h1></div>
+    </div>
 
 <div class="row">
 
-    <div class="span8">
+    <!--div class="span8">
         <h1>{{ 'views.index.list'|trans({'%entity%': 'Tailleur'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-    </div>
+    </div-->
     <div class="span2">
         {% if form_errors(filterForm) %}
         <div class="alert alert-block alert-error fade in form-errors">
@@ -57,8 +60,11 @@
     </div>
 
     <div class="span12">
-
-    <table class="table table-striped table-bordered table-condensed">
+        <div class="row">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">La liste des Tailleurs <span class="badge">13</span></h3></div>
+                    <div class="panel-body">
+    <table class="table table-striped table-condensed">
     <thead>
         <tr>
             <th>Id</th>
@@ -105,7 +111,11 @@
     </tbody>
 </table>
     </div>
+    </div>
+    </div>
+    </div>
 
+    <div class='row'>
     <div class="span4">
     {{ pagerHtml|raw }}
     </div>
