--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/new.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/new.html.twig
@@ -6,8 +6,15 @@
 {% endblock %}
 
 {% block page %}
-
-<h1>{{ 'views.new.creation'|trans({'%entity%': 'Tailleur'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
+<div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Nouveau employé </h1></div>
+    </div>
+    
+<!--h1>{{ 'views.new.creation'|trans({'%entity%': 'Client'}, 'JordiLlonchCrudGeneratorBundle') }}</h1-->
+    <div class='row'>
+    {% form_theme form with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+    <div class="col-sm-6 col-sm-offset-3">
+<!--h1>{{ 'views.new.creation'|trans({'%entity%': 'Tailleur'}, 'JordiLlonchCrudGeneratorBundle') }}</h1-->
 
 <form class="well" action="{{ path('tailleur_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
@@ -15,8 +22,10 @@
         <button type="submit" class="btn btn-success">{{ 'views.new.create'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
     </p>
 </form>
+    </div>
+    </div>
 
-<div>
+<div class='row'>
     <div class="float-left">
         <a class="btn" href="{{ path('tailleur') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
