--- a/web/css/spiderman.css
+++ b/web/css/spiderman.css
@@ -77,11 +77,12 @@ body{
 
 .form-group
 {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .control-label
 {
     margin-top: auto;
+    width: 35%;
 }
 
 .well {
@@ -99,4 +100,10 @@ body{
     border-color: #4cae4c;
     color: #fff;
     float: right;
+}
+
+select {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    
 }
