--- a/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
@@ -5,13 +5,54 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Couture : {{ entity.infosCouture }}</h1></div>
+    </div>
+    <div class="row">
+        <div class="span5 ">
+            <div class="panel panel-success background_infos">
+                    <div class="panel-heading"><h3 class="panel-title">Informations du client</h3></div>
+                    <div class="panel-body">
 
-<h1>Couture</h1>
+<!--h1>Couture</h1-->
 
 <form class="form-horizontal">
-    <fieldset>        <div class="control-group">
+    <fieldset> 
+        
+        
+        <p class="control-group">
+            <label class="control-label">Nom</label>
+            <!--div class=""-->
+                <span class="">{{ entity.client.nom }}</span>            
+            <!--/div-->
+        </p>
+        <p class="control-group">
+            <label class="control-label">Prénom</label>
+            <!--div class=""-->
+                <span class="">{{ entity.client.prenom }}</span>            
+            <!--/div-->
+        </p>    
+        <p class="control-group">
+            <label class="control-label">Téléphone</label>
+            <!--div class=""-->
+                <span class="">{{ entity.client.telephone }}</span>            
+            <!--/div-->
+        </p>
+        <p class="control-group">
+            <label class="control-label">Adresse</label>
+            <!--div class=""-->
+                <span class="">{{ entity.client.adresse }}</span>            
+            <!--/div-->
+        </p>
+        
+        
+        <!--div class="control-group">
             <label class="control-label">Id</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.id }}</span>            </div>
+        </div>        <div class="control-group">
+            <div class="control-group">
+            <label class="control-label">Nom</label>
+            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.client.nom }}</span>            </div>
         </div>        <div class="control-group">
             <label class="control-label">Datec</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datec|date('Y-m-d H:i:s') }}</span>            </div>
@@ -36,10 +77,156 @@
         </div>        <div class="control-group">
             <label class="control-label">Etat</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.etat }}</span>            </div>
-        </div>    </fieldset>
+        </div-->    </fieldset>
 </form>
+        </div>
+        </div>
+        
+</div>
+        <div class="span6">
+        <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">Informations Couture </h3></div>
+                    <div class="panel-body">
+                        <form class='table-details'>
+                            <fieldset>
+                                <p class="control-group">
+                                    <label class="control-label">Tissu</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.tissu }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Prix</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.prix }}</span>            
+                                    <!--/div-->
+                                </p>    
+                                <p class="control-group">
+                                    <label class="control-label">Finition prévue le </label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.datefin|date('d-M-Y') }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Détails Couture </label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.detail }}</span>            
+                                    <!--/div-->
+                                </p>
+                                
+                                   
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+                                    </div>
+        
+        </div>
+        <div class="row">
+        <div class="span5">
+            
+                
+                <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">Informations de Mesure </h3></div>
+                    <div class="panel-body">
+                        <form class='table-details'>
+                            <fieldset>
+                                <p class="control-group">
+                                    <label class="control-label">Cou</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.cou }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Poitrine</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.poitrine }}</span>            
+                                    <!--/div-->
+                                </p>    
+                                <p class="control-group">
+                                    <label class="control-label">Taille</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.taille }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Longueur Chemise</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.longChemise }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Longueur Pantalon</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.longPantalon }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Ceinture</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.ceinture }}</span>            
+                                    <!--/div-->
+                                </p>    
+                                <p class="control-group">
+                                    <label class="control-label">Longueur Robe</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.longRobe }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Manche</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.manche }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Hanche</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.hanche }}</span>            
+                                    <!--/div-->
+                                </p>
+                                <p class="control-group">
+                                    <label class="control-label">Epaule</label>
+                                    <!--div class=""-->
+                                        <span class="">{{ entity.mesure.epaule }}</span>            
+                                    <!--/div-->
+                                </p>
+                                
+                                   
+                            </fieldset>
+                        </form>
+                    </div>
+                </div> </div>
+                <div class="span6">
+                <div class="panel panel-success">
+                    <div class="panel-heading"><h3 class="panel-title">Informations Modèle <span class="badge">3</span></h3></div>
+                    <div class="panel-body">
+                        <form class='table-details'>
+                            <fieldset>
+                                <p class="control-group">
+                                            <label class="control-label">Libellé</label>
+                                            <!--div class=""-->
+                                                <span class="">{{ entity.modele.libelle }}</span>            
+                                            <!--/div-->
+                                </p>
+                                
+                                    <div class="controls">
+                                        <span class="image-responsive-modele">
+                                            <img src={{ asset ( entity.modele.image.getWebPath()) }} /> 
+                                        </span>            
+                                    </div>
+                                
+                                </fieldset>
+                        </form>
+                                        
+                                    
+                               
+                    </div>
+                </div>
+            </div>
+                        </div>
 
-<div>
+<div class="row">
     <div class="float-left">
         <a class="btn" href="{{ path('couture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
