--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/show.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/show.html.twig
@@ -31,19 +31,19 @@
         </div>        <div class="control-group">
             <label class="control-label">Email</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.email }}</span>            </div>
-        </div>        <div class="control-group">
+        </div>        <!--div class="control-group">
             <label class="control-label">Login</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.login }}</span>            </div>
         </div>        <div class="control-group">
             <label class="control-label">Password</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.password }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Dateembauche</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.dateembauche|date('Y-m-d H:i:s') }}</span>            </div>
+        </div-->        <div class="control-group">
+            <label class="control-label">Date d'embauche</label>
+            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.dateembauche|date('d-M-Y') }}</span>            </div>
         </div>        <div class="control-group">
             <label class="control-label">Salaire</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.salaire }}</span>            </div>
-        </div>        <div class="control-group">
+        </div>        <!--div class="control-group">
             <label class="control-label">User</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.user }}</span>            </div>
         </div>        <div class="control-group">
@@ -55,7 +55,7 @@
         </div>        <div class="control-group">
             <label class="control-label">Datec</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datec|date('Y-m-d H:i:s') }}</span>            </div>
-        </div>    </fieldset>
+        </div-->    </fieldset>
 </form>
         </div>
         </div> </div>
@@ -115,7 +115,7 @@
         
   
 <div class='row'>
-    <div class="span9 float-left">
+    <div class="float-left">
         <a class="btn" href="{{ path('tailleur') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
         </a>
