--- a/web/css/spiderman.css
+++ b/web/css/spiderman.css
@@ -83,6 +83,7 @@ body{
 {
     margin-top: auto;
     width: 35%;
+    margin-bottom: 15px;
 }
 
 .well {
@@ -106,4 +107,9 @@ select {
     background-color: #ffffff;
     border: 1px solid #cccccc;
     
+}
+
+.image-responsive-modele img
+{
+    width: 100%;
 }
