imprimantes revue print.css Les vues des interfaces Facture pour impression et debut dashboard

--- a/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
@@ -126,7 +126,7 @@
             <table class="table table-striped facture-table">
                 <tr>
                     <th>Quantité</th>
-                    <th>Désignation</th>
+                    <th class="designation">Désignation</th>
                     <th>Prix unitaire</th>
                     <th>Prix total</th>
 
