--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,6 +71,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Modèle <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
+                                    <li><a href="{{ path('categorieModele') }}">Categories</a></li>
                                     <li><a href="{{ path('modele_new') }}">Ajouter</a></li>
                                     <li><a href="{{ path('modele') }}">Lister</a></li>
 
@@ -205,7 +206,7 @@
                     </a>
                 </div>
                 <div class="clear"></div>
-                <div class="copyright">Touba Business Services & Solutions | &copy;  2014 All Rights Reserved</div>
+                <div class="copyright">Touba Business Services & Solutions | &copy;  2015 All Rights Reserved</div>
             </div>
         </div>
             </footer>
